--- a/src/app/components/shared/card/card.component.html
+++ b/src/app/components/shared/card/card.component.html
@@ -8,7 +8,7 @@
     </p>
     <!-- Navegación usando código -->
     <button
-      (click)="seeHeroCard()"
+      (click)="seeHeroDetails()"
       type="button"
       class="btn btn-outline-primary btn-block"
     >
